# GLSnake

./: .gitignore  CMakeLists.txt  README.md  app.rc
include/: Food.hpp  Snake.hpp  macros.hpp  utils.hpp  vars.hpp
src/: Food.cpp  Snake.cpp  main.cpp  utils.cpp
